<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="dev.icerock.education.practicetask.presentation.screens.auth.AuthFragment"
        android:label="@string/auth_nav_label"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_repositoriesListFragment"
            app:destination="@id/repositoriesListFragment" />
    </fragment>

    <fragment
        android:id="@+id/repositoriesListFragment"
        android:name="dev.icerock.education.practicetask.presentation.screens.repositories_list.RepositoriesListFragment"
        android:label="@string/repositories_list_nav_label"
        tools:layout="@layout/fragment_repositories_list">
        <action
            android:id="@+id/action_repositoriesListFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_right"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_repositoriesListFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="dev.icerock.education.practicetask.presentation.screens.detail_info.DetailInfoFragment"
        android:label="@string/detail_info_nav_label"
        tools:layout="@layout/fragment_detail_info">
        <action
            android:id="@+id/action_detailFragment_to_repositoriesListFragment"
            app:destination="@id/repositoriesListFragment"
            app:enterAnim="@anim/fade_out"
            app:exitAnim="@anim/slide_right"
            app:popUpTo="@id/repositoriesListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>